--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
 ﻿aiogram
+asyncio
+psycopg2
+base64
+json
+os
+random
+requests
+emoji
+tmp
+wikipedia
+bs4
+translate
+datetime
+hashlib
+youtube_search
+gtts
+time
